# modern-cpp-template-learnkit

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/agents/: cpp-debug.agent.md  cpp-reviewer.agent.md
.github/hooks/: governance-audit.json  governance-audit.sh
.github/skills/cpp-architecture/: SKILL.md
.github/skills/cpp-cmake/: SKILL.md
.github/skills/cpp-docs/: SKILL.md
.github/skills/cpp-format/: SKILL.md
.github/skills/cpp-googletest/: SKILL.md
.github/skills/cpp-modern-cpp/: SKILL.md
.github/skills/git-commit/: SKILL.md
docs/: Doxyfile  SETUP_GUIDE.md
docs/doxyfiles/: DoxyCustom.css
include/sampleapp/: AppController.hpp  User.hpp  UserRepository.hpp  UserService.hpp
include/sampleapp/interfaces/: IUserRepository.hpp
src/: CMakeLists.txt  main.cpp
src/sampleapp/: AppController.cpp  CMakeLists.txt  UserRepository.cpp  UserService.cpp
test/: CMakeLists.txt
test/unit/sampleapp/: CMakeLists.txt  UserServiceTest.cpp
test/unit/sampleapp/mock/: MockUserRepository.hpp
tools/: clean_all.sh  coverage.cmake  generate_coverage.sh  generate_test_report.sh  gtest_report.xsl  run_valgrind.sh
